--- a/ds-interview-exam.ipynb
+++ b/ds-interview-exam.ipynb
@@ -123,6 +123,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "\n",
+    "\n",
+    "class LinkedList: #Initialize a linked list from scratch\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "\n",
+    "    def print_list(self):\n",
+    "        cur_node = self.head\n",
+    "        while cur_node:\n",
+    "            print(cur_node.data)\n",
+    "            cur_node = cur_node.next\n",
+    "\n",
+    "    def append(self, data):\n",
+    "        new_node = Node(data)\n",
+    "\n",
+    "        if self.head is None:\n",
+    "            self.head = new_node\n",
+    "            return\n",
+    "\n",
+    "        last_node = self.head\n",
+    "        while last_node.next:\n",
+    "            last_node = last_node.next\n",
+    "        last_node.next = new_node\n",
+    "\n",
+    "llist = LinkedList()\n",
+    "llist.append(\"1\")\n",
+    "llist.append(\"2\")\n",
+    "llist.append(\"3\")\n",
+    "llist.append(\"3\")\n",
+    "llist.append(\"2\")\n",
+    "llist.append(\"1\")\n",
+    "\n",
+    "\n",
+    "llist2 = LinkedList()\n",
+    "llist2.append(\"1\")\n",
+    "llist2.append(\"2\")\n",
+    "llist2.append(\"3\")\n",
+    "\n",
+    "def is_palindrome(self):\n",
+    "    s=\"\"\n",
+    "    p=self.head\n",
+    "    while p:\n",
+    "        s+=p.data\n",
+    "        p=p.next\n",
+    "    return s == s[::-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "is_palindrome(llist)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -134,8 +200,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The time complexity: O(n)\n",
+    "The space complexity: O(n)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Q 1.2.3\n",
     "Consider an alternative implementation to detect if L is a palindrome and write a new function, `is_palindrome2(L)`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Another method, this time uses recursion\"\"\"\n",
+    "class node():\n",
+    "    def __init__(self,x):\n",
+    "        self.val=x\n",
+    "        self.next=None\n",
+    "\n",
+    "list1=node('1')\n",
+    "list1.next=node('g') # change to 2 and rerun -- it'll show True\n",
+    "list1.next.next=node('3')\n",
+    "list1.next.next.next=node('2')\n",
+    "list1.next.next.next.next=node('1')\n",
+    "\n",
+    "head=list1\n",
+    "i, j=0, 0\n",
+    "\n",
+    "def is_palindrome2(list): \n",
+    "  \n",
+    "    if list is None:\n",
+    "        return 0\n",
+    "\n",
+    "    \n",
+    "    global j\n",
+    "    j+= 1\n",
+    "    x = is_palindrome2(list.next)\n",
+    "\n",
+    "    \n",
+    "    if x is False:\n",
+    "        return False\n",
+    "    global head, i\n",
+    "    i+= 1\n",
+    "    j-= 1\n",
+    "\n",
+    "\n",
+    "    if i>=j:\n",
+    "        return True\n",
+    "    \n",
+    "    if head.val is list.val:\n",
+    "        head=head.next\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "print(is_palindrome2(list1))"
    ]
   },
   {
@@ -150,8 +276,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The time complexity: O(n)\n",
+    "The space complexity: O(1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Q 1.2.5 \n",
     "What are some examples of optimizations that could improve computational performance?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The time performance, most likely, cannot be further improved.\n",
+    "The space complexity might be improved by finding the middle element of the list, turning the right half, traversing\n",
+    "through it to compare against the left part"
    ]
   },
   {
@@ -180,6 +323,79 @@
     "![reno die image](http://thumbs.ebaystatic.com/images/g/IQ8AAOSwvzRXyagD/s-l225.jpg)\n",
     "\n",
     "Using a single 6-side die, how can you generate a random number between 1 - 7?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"The idea is to roll the dice twice, list all cases, remove 6-6 and reroll again in this case, divide the 35 remaining items \n",
+    "into seven equal groups and randomly pick an item from the list that consists of those groups. \n",
+    "Each item can be chosen with a probability 1/7.\"\"\"\n",
+    "list1 = ['1','2','3','4','5','6'] # first dice\n",
+    "list2 = ['1','2','3','4','5','6'] # second dice\n",
+    "combined1 = []\n",
+    "for i in list1:\n",
+    "    for j in list2:\n",
+    "        combined1.append(i+j) #combining all possible cases\n",
+    "combined2 = combined1[:-1] # getting rid of 6-6\n",
+    "\n",
+    "groups = [combined2[i:i+5] for i in range(0, len(combined2), 5)] #making seven equal groups of elements\n",
+    "\n",
+    "##print(groups) # this is how they look\n",
+    "##print(len(groups)) # indeed, there are seven elements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "rand_ind = groups.index(random.choice(groups)) #randomly chooses an item in the list and returns its index\n",
+    "##print(rand_ind) #just checking that it works"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dict_17 = {0:'Random number 1',1:'Random number 2',2:'Random number 3',\n",
+    "           3:'Random number 4',4:'Random number 5',5:'Random number 6',6:'Random number 7'} # dictionary instead of the else statement to save on typing\n",
+    "print(dict_17[rand_ind])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"Now let's roll the real dices\"\"\"\n",
+    "rand_a = random.randint(1,6)\n",
+    "rand_b = random.randint(1,6)\n",
+    "if rand_a == rand_b == 6:\n",
+    "    rand_a = rnd.randint(1,6)\n",
+    "    rand_b = rnd.randint(1,6)\n",
+    "##print(rand_a, rand_b) ## what we're getting\n",
+    "rand_c = str(rand_a) + str(rand_b)\n",
+    "##print(rand_c) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"returning the index that will be a number from one to seven of the element's list\n",
+    "that contains our rand_c\"\"\"\n",
+    "next(i for i, v in enumerate(groups, start =1) if rand_c in v)"
    ]
   },
   {
@@ -218,9 +434,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:bombora-datascience-exam]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-bombora-datascience-exam-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -232,9 +448,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
